--- a/blue/bluedeployment.yaml
+++ b/blue/bluedeployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: blue
-        image: nevermyuk/capstone
+        image: nevermyuk/capstone:latest
         ports:
         - containerPort: 80
           name: http-server
