--- a/green/greencontroller.yaml
+++ b/green/greencontroller.yaml
@@ -1,22 +1,23 @@
-apiVersion: v1
-kind: ReplicationController
+---
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: green
-  labels:
+  labels: 
     app: green
 spec:
-  replicas: 1
   selector:
-    app: green
+    matchLabels:
+      app: green
+  replicas: 1
   template:
     metadata:
-      name: green
       labels:
         app: green
     spec:
       containers:
       - name: green
-        image: nevermyuk/capstone
+        image: nevermyuk/capstone:latest
         ports:
         - containerPort: 80
           name: http-server
