--- a/blue/bluedeployment.yaml
+++ b/blue/bluedeployment.yaml
@@ -18,6 +18,7 @@ spec:
       containers:
       - name: blue
         image: nevermyuk/capstone
+        imagePullPolicy: Always
         ports:
         - containerPort: 80
           name: http-server
